# ProofPack

./: .gitignore  CLAUDEME.md  LIMITATIONS.md  README.md  ROADMAP.md  constants.py  economic.py  privacy.py  proof.py  proofpack_demo.py  pyproject.toml  setup.py
anchor/: __init__.py  hash.py  prove.py  verify.py
benchmarks/: PERFORMANCE.md  __init__.py  bench_crag.py  bench_graph_query.py  bench_merkle_anchor.py  bench_receipt_gen.py
brief/: __init__.py  compose.py  dialectic.py  health.py  retrieve.py
compliance/: COMPLIANCE_REPORT.md
config/: __init__.py  features.py
core/: __init__.py
detect/: __init__.py  anomaly.py  core.py  drift.py  resource.py
docs/: ADOPTERS.md  CLAIMS_VERIFICATION.md  README.md  RNES_v1.md  agent-lifecycle.md  architecture.md  economic-integration.md  extreme-environments.md  mcp-integration.md  privacy-levels.md  rnes-compliance.md  temporal-graph.md  vs-competitors.md  web-fallback.md
enterprise/: __init__.py
examples/: fraud_detection.py
fallback/: correct.py  evaluate.py  merge.py  web.py
gate/: __init__.py  confidence.py  decision.py  drift.py
graph/: backend.py  episodic.py  index.py  ingest.py  query.py  sync.py
ledger/: __init__.py  ingest.py
loop/: __init__.py  entropy.py
mcp/: auth.py  server.py  tools.py
monte_carlo/: simulate.py  threshold.py  variance.py
offline/: __init__.py  merkle_local.py  queue.py  reconnect.py  sync.py
packet/: __init__.py  attach.py  audit.py  build.py
proofpack/: __init__.py  economic.py  privacy.py  proof.py  workflow_graph.json
proofpack-schema/: README.md
proofpack-test/: conftest.py  sim.py  test_economic.py  test_fallback.py  test_graph.py  test_integration.py  test_mcp_server.py  test_offline.py  test_privacy.py  test_proof_unified.py
proofpack_cli/: __init__.py  anchor_cmd.py  compose_cmd.py  detect_cmd.py  economic_cmd.py  fallback_cmd.py  gate_cmd.py  graph_cmd.py  ledger_cmd.py  loop_cmd.py  main.py  mcp_cmd.py  monte_cmd.py  offline_cmd.py  output.py  packet_cmd.py  privacy_cmd.py  rnes_cmd.py  spawn_cmd.py
qed_bridge/: __init__.py
receipts/: MANIFEST.anchor  README.txt  fraud_cases.json  fraud_detection_v1.receipts.jsonl  generate_fraud_receipts.py  reproduce_fraud.sh  verify_standalone.py
spawner/: birth.py  coordination.py  graduate.py  lifecycle.py  patterns.py  prune.py  recursion.py  registry.py  topology.py
standards/: CONTRIBUTE.md  RNES_v1.md
tests/: README.md  conftest.py  sim.py  test_compliance.py  test_economic.py  test_fallback.py  test_graph.py  test_integration.py  (+4 more)
(+322 files in other folders)
